--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>etch a sketch ✏️</title>
 </head>
 <body>
-    <div id="sketch-container">
-
+    <div id="container">        
+        <div id="wrapper">
+            <header>etch a sketch</header>
+            <div id="sketch-container">
+                
+            </div>
+            <div id="footer-wrapper">
+                <div></div>
+                <div></div>
+            </div>
+        </div>
     </div>
 </body>
+<script src="script.js"></script>
 </html>
