added grid logic, eventlisteners

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <div id="container">        
         <div id="wrapper">
             <header>etch a sketch</header>
-            <div id="sketch-container">
-                
-            </div>
+            <div id="sketch-container"></div>
             <div id="footer-wrapper">
-                <div></div>
-                <div></div>
+                <div class="clean-grid">🔄</div>
+                <div class="grid-brush">
+                    <div id="circle"></div>
+                </div>
             </div>
         </div>
     </div>
