added changing grid size functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <div id="container">        
         <div id="wrapper">
-            <header>etch a sketch</header>
+            <div id="header-wrapper">
+                <header>etch a sketch</header>
+                <input type="text" id="grid-size-text" placeholder="change grid size">
+            </div>
             <div id="sketch-container"></div>
             <div id="footer-wrapper">
                 <div class="clean-grid">🔄</div>
